--- a/index.html
+++ b/index.html
@@ -235,26 +235,38 @@
 					<div class="row language">
 						<h3 class="mt-2 project-color">Education</h3>
 						<div class="mb-4">
-							<h5 class="project-color">Jahangirnagar University, Savar, Dhaka, Bangladesh</h5>
+							<h5 class="project-color"><br><i class="fa-solid fa-graduation-cap"></i> Jahangirnagar
+								University, Savar, Dhaka, Bangladesh</h5>
 							<h6 class="fw-bold">M.Sc. in Computer Science and Engineering (July 2022 – August 2023)</h6>
-							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">3.95</span> / 4.00</p>
-							<p class="margin-bottom-zero"><strong>Merit Position:</strong> <span class="project-color">3<sup>rd</sup></span> / among 50</p>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">3.95</span>
+								/ 4.00</p>
+							<p class="margin-bottom-zero"><strong>Merit Position:</strong> <span
+									class="project-color">3<sup>rd</sup></span> / among 50</p>
 						</div>
 						<div class="mb-4">
-							<h5 class="project-color">Jahangirnagar University, Savar, Dhaka, Bangladesh</h5>
+							<h5 class="project-color"><i class="fa-solid fa-graduation-cap"></i> Jahangirnagar
+								University, Savar, Dhaka, Bangladesh</h5>
 							<h6 class="fw-bold">B.Sc. in Computer Science and Engineering (March 2017 – June 2022)</h6>
-							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">3.70</span> / 4.00</p>
-							<p class="margin-bottom-zero"><strong>Merit Position:</strong> <span class="project-color">3<sup>rd</sup></span> / among 65</p>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">3.70</span>
+								/ 4.00</p>
+							<p class="margin-bottom-zero"><strong>Merit Position:</strong> <span
+									class="project-color">3<sup>rd</sup></span> / among 65</p>
 						</div>
 						<div class="mb-4">
-							<h5 class="project-color">Kallyanpur Girls’ School & College, Dhaka, Bangladesh</h5>
-							<h6 class="fw-bold">Higher Secondary School Certificate (H.S.C.), Science Group (passing year – 2016)</h6>
-							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">5.00</span> / 5.00</p>
+							<h5 class="project-color"><i class="fa-solid fa-graduation-cap"></i> Kallyanpur Girls’
+								School & College, Dhaka, Bangladesh</h5>
+							<h6 class="fw-bold">Higher Secondary School Certificate (H.S.C.), Science Group (passing
+								year – 2016)</h6>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">5.00</span>
+								/ 5.00</p>
 						</div>
 						<div class="mb-4">
-							<h5 class="project-color">Kallyanpur Girls’ School & College, Dhaka, Bangladesh</h5>
-							<h6 class="fw-bold">Secondary School Certificate (S.S.C.), Science Group (passing year – 2014)</h6>
-							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">5.00</span> / 5.00</p>
+							<h5 class="project-color"><i class="fa-solid fa-graduation-cap"></i> Kallyanpur Girls’
+								School & College, Dhaka, Bangladesh</h5>
+							<h6 class="fw-bold">Secondary School Certificate (S.S.C.), Science Group (passing year –
+								2014)</h6>
+							<p class="margin-bottom-zero"><strong>GPA:</strong> <span class="project-color">5.00</span>
+								/ 5.00</p>
 						</div>
 					</div>
 				</div>
@@ -310,7 +322,7 @@
 							</div>
 						</div>
 					</div>
-					<h3 class="mt-2 project-color">POSTER PRESENTATION</h3>
+					<h3 class="mt-2 project-color">Poster Presentation</h3>
 					<div class="row">
 						<div class="card mb-3 shadow-sm">
 							<div class="card-body d-flex align-items-center">
@@ -449,6 +461,12 @@
 									Bangladesh)</td>
 							</tr>
 							<tr>
+								<td style="border: 1px solid black; padding: 8px;">CSE2101</td>
+								<td style="border: 1px solid black; padding: 8px;">Digital Logic Design</td>
+								<td style="border: 1px solid black; padding: 8px;">Fall 2024 (University
+									of Liberal Arts Bangladesh)</td>
+							</tr>
+							<tr>
 								<td style="border: 1px solid black; padding: 8px;">CSE1201</td>
 								<td style="border: 1px solid black; padding: 8px;">Structured Programming </td>
 								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University
@@ -484,12 +502,6 @@
 								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University
 									of Liberal Arts Bangladesh)</td>
 							</tr>
-							<tr>
-								<td style="border: 1px solid black; padding: 8px;">CSE2101</td>
-								<td style="border: 1px solid black; padding: 8px;">Digital Logic Design</td>
-								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University
-									of Liberal Arts Bangladesh)</td>
-							</tr>
 
 						</tbody>
 					</table>
@@ -503,19 +515,87 @@
 					<h3 class="mt-2 project-color">Work Experience</h3>
 					<div class="experience">
 						<h5>University of Liberal Arts Bangladesh</h5>
-						<span>- Lecturer, Department of Computer Science and Engineering (October 2023 – Present)</span>
+						<span style="color: black;">- Lecturer, Department of Computer Science and Engineering (October 2023 – Present)</span>
+						<h6 style="font-size: 15px"><br>Responsibilities</h6>
+						<ul style="font-size: 14px; color: #404245;">
+							<li>Conducting classes, Preparing lesson plans, class lectures, and lab manuals</li>
+							<li>Examining answer scripts</li>
+							<li>Supervising students on a number of projects</li>
+							<li>Advising assigned students throughout the semesters</li>
+							<li>Preparing the course documents and completing the OBE-based course file pack at
+								the end of each semester</li>
+							<li>Documenting meetings and supporting quality improvement activities as a
+								Secretary Member of the CQI Committee</li>
+							<li>Reviewing and improving course content as a member of the Curricular Committee
+							</li>
+						</ul>
 					</div>
 					<div class="experience">
 						<h5>Green University of Bangladesh </h5>
-						<span>- Lecturer, Department of Computer Science and Engineering (September 2022 – September
+						<span style="color: black;">- Lecturer, Department of Computer Science and Engineering (September 2022 – September
 							2023)</span>
+						<h6 style="font-size: 15px"><br>Responsibilities</h6>
+						<ul style="font-size: 14px; color: #404245;">
+							<li>Conducting classes, Preparing Lesson Plans and Outcomes</li>
+							<li>Preparing class lectures and lab manuals</li>
+							<li>Examining Answer Scripts</li>
+							<li>Advising assigned students throughout the semesters</li>
+							<li>Preparing the course documents and completing the OBE-based course file pack at the end of each semester</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-8 offset-md-1 gap-between mb-5" id="extraCurricularContent">
 				<div class="container language">
-					<h3 class="mt-2 project-color">Extra-curricular Activities</h3>
-					<ul>
+					<h3 class="mt-2 project-color">Miscellaneous</h3>
+					
+					<div class="card mb-3 shadow-sm">
+						<div class="card-body">
+							<h5 class="card-title">Extra-curricular Activities</h5>
+							<div class="d-flex justify-content-between">
+								<a href="extra-curricular-activities.html" style="margin-bottom: 22px;" class="btn btn-primary">More Details <i
+									class="fas fa-external-link-alt"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="card mb-3 shadow-sm">
+						<div class="card-body">
+							<h5 class="card-title">Certifications and Online Courses</h5>
+							<div class="d-flex justify-content-between">
+								<a href="certifications-online-courses.html" style="margin-bottom: 22px;" class="btn btn-primary">More Details <i
+									class="fas fa-external-link-alt"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="card mb-3 shadow-sm">
+						<div class="card-body">
+							<h5 class="card-title">Training Program</h5>
+							<div class="d-flex justify-content-between">
+								<a href="training-program.html" style="margin-bottom: 22px;" class="btn btn-primary">More Details <i
+									class="fas fa-external-link-alt"></i></a>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="card mb-3 shadow-sm">
+						<div class="card-body">
+							<h5 class="card-title">Photography</h5>
+							<div class="d-flex justify-content-between">
+								<a href="photography.html" style="margin-bottom: 22px;" class="btn btn-primary">More Details <i
+									class="fas fa-external-link-alt"></i></a>
+							</div>
+						</div>
+					</div> -->
+					<div class="card mb-3 shadow-sm">
+						<div class="card-body">
+							<h5 class="card-title">Entrepreneurial Experience</h5>
+							<div class="d-flex justify-content-between">
+								<a href="entrepreneurial-experience.html" style="margin-bottom: 22px;" class="btn btn-primary">More Details <i
+									class="fas fa-external-link-alt"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<!-- <ul>
 						<li>
 							<strong>Member Secretary of Continuous Quality Improvement Committee,
 							</strong>Department of Computer Science and Engineering, University of Liberal Arts
@@ -567,32 +647,21 @@
 							(November 2019)
 						</li>
 						<li>
-							<strong>Volunteered 
+							<strong>Volunteered
 							</strong> in the <strong>JU Admission Test Help Desk (Session 2020-2021)</strong>
 						</li>
 						<li>
-							<strong>Volunteered 
+							<strong>Volunteered
 							</strong> in the <strong>Silver Jubilee & Reunion JU CSE 2018</strong>
 						</li>
 						<li>
-							<strong>Performed  
-							</strong>dance, drama in several cultural programs arranged by CSE, Jahangirnagar University in 2017-18
+							<strong>Performed
+							</strong>dance, drama in several cultural programs arranged by CSE, Jahangirnagar University
+							in 2017-18
 						</li>
 
-					</ul>
+					</ul> -->
 				</div>
-				<div class="container language">
-					<h3 class="mt-2 project-color">
-						Certifications and Online Courses
-						<a target="_blank" href="certifications-online-courses.html"><i class="fas fa-external-link-alt"></i></a>
-					</h3>
-				</div>
-				<!-- <div class="container language">
-					<h3 class="mt-2 project-color">
-						Training Program
-						<a target="_blank" href="training-program.html"><i class="fas fa-external-link-alt"></i></a>
-					</h3>
-				</div> -->
 			</div>
 
 			<div class="col-md-8 offset-md-1 gap-between mb-5" id="contactContent">
