--- a/training-program.html
+++ b/training-program.html
@@ -141,28 +141,184 @@
 					<h3 class="mt-2 project-color">Training Program</h3><br>
 					<ul>
 						<li>
-							Capstone: Retrieving, Processing, and Visualizing Data with Python 
-							<a target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/FKYDTLBREYB3"><i class="fas fa-external-link-alt"></i></a>
+							Induction Training for Tertiary Teachers, The Center of Excellence for Teaching and Learning
+							(CETL), University of Liberal Arts Bangladesh (Oct. 2023 – Present)
+							<ul>
+								<li>
+									<strong>Course topics:</strong>
+									<ul>
+										<li>Module 01: Principle of teaching and learning
+											<ul>
+												<li>Lecture 01: Principle of Teaching & Learning: Pedagogy & Andragogy
+													in the context of 21st century</li>
+												<li>Lecture 02: Teaching philosophy</li>
+											</ul>
+										</li>
+										<li>Module 02: Teaching psychology
+											<ul>
+												<li>Lecture 03: Transactional analysis</li>
+												<li>Lecture 04: Application of Emotional intelligence in Teaching &
+													Learning</li>
+											</ul>
+										</li>
+										<li>Module 03: Feedback
+											<ul>
+												<li>Lecture 05: The art of receiving and giving quality feedback: The
+													application of Johari Window</li>
+											</ul>
+										</li>
+										<li>Module 04: Positive deviant and appreciative inquiry
+											<ul>
+												<li>Lecture 06: The application of positive deviant and appreciative
+													inquiry in teaching & learning</li>
+											</ul>
+										</li>
+										<li>Module 05: Bloom's taxonomy
+											<ul>
+												<li>Lecture 07: The art of setting course objectives and learning
+													outcomes: application of Bloom's Taxonomy</li>
+											</ul>
+										</li>
+										<li>Module 06: Facilitating teaching & learning methods, tools and techniques
+											<ul>
+												<li>Lecture 08: Facilitating teaching & learning methods, tools and
+													techniques: from the perspective of Pure science</li>
+												<li>Lecture 09: Facilitating teaching & learning methods, tools and
+													techniques: from the perspective of Arts and Social science</li>
+											</ul>
+										</li>
+										<li>Module 07: Application of ICT in teaching
+											<ul>
+												<li>Lecture 10: Application of ICT in teaching and learning</li>
+											</ul>
+										</li>
+										<li>Module 08: Assessment and evaluation in learning
+											<ul>
+												<li>Lecture 11: Assessing and evaluating student's learning</li>
+											</ul>
+										</li>
+										<li>Module 09: Ethics and values in teaching
+											<ul>
+												<li>Lecture 12: The role of teachers in inducting moral education in
+													teaching and learning</li>
+												<li>Lecture 13: How students can be trained to be ethical in their
+													behavior</li>
+											</ul>
+										</li>
+										<li>Module 10: Referencing
+											<ul>
+												<li>Lecture 14: How to write references</li>
+												<li>Lecture 15: How to write footnote and paraphrasing</li>
+											</ul>
+										</li>
+										<li>Module 11: Journal article
+											<ul>
+												<li>Lecture 16: Writing scholarly articles for renowned journals</li>
+											</ul>
+										</li>
+										<li>Module 12: Practicum - Micro teaching and simulation
+											<ul>
+												<li>Lecture 17: Simulation</li>
+												<li>Lecture 18: Micro-teaching</li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+							</ul>
 						</li>
 						<li>
-							Neural Networks and Deep Learning 
-							<a target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/B5GA8JCM7VWV"><i class="fas fa-external-link-alt"></i></a>
+							Certifications in Teaching and Learning, The Center of Excellence for Teaching and Learning
+							(CETL), Green University of Bangladesh (Sept. 2022- Jan 2023)
+							<ul>
+								<li>
+									<strong>Course topics:</strong>
+									<ul>
+										<li>Module 01: Principle of teaching and learning
+											<ul>
+												<li>Lecture 01: Principle of Teaching & Learning: Pedagogy & Andragogy
+													in the context of 21st century</li>
+												<li>Lecture 02: Teaching philosophy</li>
+											</ul>
+										</li>
+										<li>Module 02: Teaching psychology
+											<ul>
+												<li>Lecture 03: Transactional analysis</li>
+												<li>Lecture 04: Application of Emotional intelligence in Teaching &
+													Learning</li>
+											</ul>
+										</li>
+										<li>Module 03: Feedback
+											<ul>
+												<li>Lecture 05: The art of receiving and giving quality feedback: The
+													application of Johari Window</li>
+											</ul>
+										</li>
+										<li>Module 04: Positive deviant and appreciative inquiry
+											<ul>
+												<li>Lecture 06: The application of positive deviant and appreciative
+													inquiry in teaching & learning</li>
+											</ul>
+										</li>
+										<li>Module 05: Bloom's taxonomy
+											<ul>
+												<li>Lecture 07: The art of setting course objectives and learning
+													outcomes: application of Bloom's Taxonomy</li>
+											</ul>
+										</li>
+										<li>Module 06: Facilitating teaching & learning methods, tools and techniques
+											<ul>
+												<li>Lecture 08: Facilitating teaching & learning methods, tools and
+													techniques: from the perspective of Pure science</li>
+												<li>Lecture 09: Facilitating teaching & learning methods, tools and
+													techniques: from the perspective of Arts and Social science</li>
+											</ul>
+										</li>
+										<li>Module 07: Application of ICT in teaching
+											<ul>
+												<li>Lecture 10: Application of ICT in teaching and learning</li>
+											</ul>
+										</li>
+										<li>Module 08: Assessment and evaluation in learning
+											<ul>
+												<li>Lecture 11: Assessing and evaluating student's learning</li>
+											</ul>
+										</li>
+										<li>Module 09: Ethics and values in teaching
+											<ul>
+												<li>Lecture 12: The role of teachers in inducting moral education in
+													teaching and learning</li>
+												<li>Lecture 13: How students can be trained to be ethical in their
+													behavior</li>
+											</ul>
+										</li>
+										<li>Module 10: Referencing
+											<ul>
+												<li>Lecture 14: How to write references</li>
+												<li>Lecture 15: How to write footnote and paraphrasing</li>
+											</ul>
+										</li>
+										<li>Module 11: Journal article
+											<ul>
+												<li>Lecture 16: Writing scholarly articles for renowned journals</li>
+											</ul>
+										</li>
+										<li>Module 12: Practicum - Micro teaching and simulation
+											<ul>
+												<li>Lecture 17: Simulation</li>
+												<li>Lecture 18: Micro-teaching</li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+							</ul>
 						</li>
 						<li>
-							Programming for Everybody (Getting Started with Python) 
-							<a target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/RATSE4DZ4XSY"><i class="fas fa-external-link-alt"></i></a>
+							Participated in the Day long workshop on Computer Hardware, Jahangirnagar University
+							Computer Club (November 7, 2017)
 						</li>
 						<li>
-							Web Application Technologies and Django 
-							<a target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/7A76FQZBXP82"><i class="fas fa-external-link-alt"></i></a>
-						</li>
-						<li>
-							Using Databases with Python 
-							<a target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/Q6RXWMYBX4HH"><i class="fas fa-external-link-alt"></i></a>
-						</li>
-						<li>
-							Using Python to Access Web Data 
-							<a target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/QTH7R96DJKJ8"><i class="fas fa-external-link-alt"></i></a>
+							Participated in the Fresher’s Reception & Debate Workshop, Jahangirnagar University Debate
+							Organization (April 12, 2012)
 						</li>
 					</ul>
 				</div>
