--- a/entrepreneurial-experience.html
+++ b/entrepreneurial-experience.html
@@ -140,7 +140,7 @@
 				<div class="container language">
 					<h3 class="mt-2 project-color">Entrepreneurial Experience</h3>
 					<div class="container mt-4">
-						<h4 class="fw-bold">Founder of Styleocity</h4>
+						<h4 class="fw-bold">Founder of <a target="_blank" href="https://www.facebook.com/styleocity.frt">Styleocity</a></h4>
 						<p class="text-muted">A Online Clothing Store (August 2020 - Present)</p>
 						<ul class="list-unstyled">
 							<li>
