--- a/extra-curricular-activities.html
+++ b/extra-curricular-activities.html
@@ -139,7 +139,7 @@
 			<div class="col-md-8 offset-md-1 mb-5 active">
 				<div class="container language">
 					<h3 class="mt-2 project-color">Extra-curricular activities</h3><br>
-					<ul>
+					<!-- <ul>
 						<li>Member Secretary of Continuous Quality Improvement Committee, Department of Computer Science and Engineering, University of Liberal Arts Bangladesh (June 2024 – Present)</li>
 						<li>Curriculum Committee Member, Department of Computer Science and Engineering, University of Liberal Arts Bangladesh (November 2023 – Present)</li>
 						<li>Student Mentorship and Advising, Department of Computer Science and Engineering, University of Liberal Arts Bangladesh (November 2023 – Present)</li>
@@ -154,6 +154,22 @@
 						<li>Volunteered in the JU Admission Test Help Desk (Session 2020-2021)</li>
 						<li>Volunteered in the Silver Jubilee & Reunion JU CSE 2018</li>
 						<li>Performed dance, drama in several cultural programs arranged by CSE, Jahangirnagar University in 2017-18</li>
+					</ul> -->
+					<ul>
+						<li><b>Member Secretary</b> of <i>Continuous Quality Improvement Committee</i>, Department of Computer Science and Engineering, University of Liberal Arts Bangladesh (<b>June 2024 – Present</b>)</li>
+						<li><b>Curriculum Committee Member</b>, Department of Computer Science and Engineering, University of Liberal Arts Bangladesh (<b>November 2023 – Present</b>)</li>
+						<li><b>Student Mentorship and Advising</b>, Department of Computer Science and Engineering, University of Liberal Arts Bangladesh (<b>November 2023 – Present</b>)</li>
+						<li><b>Organizing Committee Member</b>, <i>International Conference on Advances in Computing, Communication, Electrical and Smart Systems (iCACCESS 2024)</i>, University of Liberal Arts Bangladesh (<b>held on March 8-9, 2024</b>)</li>
+						<li><b>Organizing Committee Member</b>, <i>4th International Conference on Sustainable Technologies for Industry 4.0 (STI 2022)</i>, Green University of Bangladesh (<b>held on December 17-18, 2022</b>)</li>
+						<li><b>Machine Learning and Artificial Intelligence Research Cell Member</b>, Green University of Bangladesh (<b>March 2022 - September 2022</b>)</li>
+						<li><b>Associate Programme Secretary</b>, Jahangirnagar University Computer Club (<b>July 2018 - April 2022</b>)</li>
+						<li><b>General Member</b>, Jahangirnagar University Higher Study Club (<b>December 2017 - March 2022</b>)</li>
+						<li><b>Participated</b> in the <i>Inter-Department Programing Contest</i>, arranged by CSE department, Jahangirnagar University (<b>2017-2019</b>)</li>
+						<li><b>Organizing Committee Member</b>, JU CSE Fest 2019 (<b>October 18-19, 2019</b>)</li>
+						<li><b>Organized</b> <i>Girls' Innovative Project Contests</i> at CSE department, Jahangirnagar University (<b>November 2019</b>)</li>
+						<li><b>Volunteered</b> in the JU Admission Test Help Desk (<b>Session 2020-2021</b>)</li>
+						<li><b>Volunteered</b> in the Silver Jubilee & Reunion JU CSE 2018</li>
+						<li><b>Performed</b> <i>dance, drama</i> in several cultural programs arranged by CSE, Jahangirnagar University in (<b>2017-18</b>)</li>
 					</ul>
 					
 				</div>
