home page spelling correction

--- a/index.html
+++ b/index.html
@@ -492,13 +492,13 @@
 							</tr>
 							<tr>
 								<td style="border: 1px solid black; padding: 8px;">CSE2201</td>
-								<td style="border: 1px solid black; padding: 8px;">Algrithms</td>
+								<td style="border: 1px solid black; padding: 8px;">Algorithm</td>
 								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University
 									of Liberal Arts Bangladesh)</td>
 							</tr>
 							<tr>
 								<td style="border: 1px solid black; padding: 8px;">CSE2202</td>
-								<td style="border: 1px solid black; padding: 8px;">Algrithms Lab</td>
+								<td style="border: 1px solid black; padding: 8px;">Algorithm Lab</td>
 								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University
 									of Liberal Arts Bangladesh)</td>
 							</tr>
