--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 										Award)|
 										<a href="https://ieeexplore.ieee.org/document/9230994"
 											target="_blank">[paper]</a>
+										<a href="assets/pdf/paper.pdf">[pdf]</a>
 									</p>
 								</div>
 							</div>
