publications section modified

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
 									<p class="mb-1">
 										<strong>Fatema Khan</strong>, Md. Imdadul Islam, Sarwar Jahan.
 										Enhancing Classification Robustness: Stability Analysis of Fuzzy and
-										Shannon Entropy of Image under Noisy Environment. Journal of Visual
-										Communication and Image Representation. [Under Review]
+										Shannon Entropy of Image under Noisy Environment. Signal,Image and Video 
+										Processing. | [Under Review]
 									</p>
 								</div>
 							</div>
@@ -316,8 +316,7 @@
 										Tanjim Taharat Aurpa, Farzana Akter, Md. Mehedi Hasan, Shakil Ahmed, Shifat Ara
 										Rafiq, and <strong>Fatema Khan.</strong>
 										Multi-BERT Ensemble Approach for the Recognition of Bangla Medical Entity.
-										Submitted to the ACM Transactions on Asian and Low-Resource Language Information
-										Processing. | [Under Review]
+										Submitted to PLOS One. | [Under Review]
 									</p>
 								</div>
 							</div>
